--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -204,6 +204,7 @@
 
                     $('#wait').hide();
                     var arr_volunteers = JSON.parse(data.d);
+                    
                     //console.log(arr_volunteers);
                     GENERAL.VOLUNTEERS.setVolunteersList(JSON.stringify(arr_volunteers));
                     for (i in arr_volunteers) {
@@ -233,7 +234,7 @@
                         else cellphone2 = arr_volunteers[i].HomePhone;
 
                         let showDocumentedRidesBtn = '';
-                        showDocumentedRidesBtn += `<div class='btnWrapper-left'><span class="badge badge-default">${arr_volunteers[i].NoOfDocumentedRides}</span>`;
+                        showDocumentedRidesBtn += `<div class='btnWrapper-left'><span class="badge badge-default">${arr_volunteers[i].No_of_rides}</span>`;
                         showDocumentedRidesBtn += '<button type="button" class="btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5" id ="showDocumentedRidesBtn" title="תיעוד הסעות" data-toggle="modal" data-target="#documentedRidesModal"><i class="fa fa-car" aria-hidden="true"></i></button></div>';
                         btnStr += showDocumentedRidesBtn;
 
@@ -296,6 +297,8 @@
                             MostCommonPath: arr_volunteers[i].MostCommonPath,
                             NearestBigCity: arr_volunteers[i].NearestBigCity,
                             JoinDate: joinDate,
+                            AvailableSeats: arr_volunteers[i].AvailableSeats == 0 ? 'לא ידוע' : arr_volunteers[i].AvailableSeats,
+                            isBooster: arr_volunteers[i].IsBooster?'✅':'❌',
                         }
                         allVolunteersFromDb.push(Volunteer);
                     }
@@ -320,7 +323,7 @@
                                 targets: 3,
                                 className: 'text-left-strong'
                             },
-                            { "targets": [11], "orderable": false },
+                            { "targets": [13], "orderable": false },
                             { targets: 6, type: 'de_datetime' },
                             { targets: 8, type: 'de_date' },
                             { targets: 10, type: 'de_date' },
@@ -338,8 +341,10 @@
                             { data: "NumOfRides_last2Months", width: "2%" },   //7
                             { data: "LatestDrive", width: "2%" },              //8
                             { data: "MostCommonPath", width: "3%" },           //9
-                            { data: "JoinDate", width: "4%" },                 //10
-                            { data: "Buttons", width: "25%" },                 //11
+                            { data: "JoinDate", width: "4%" },                 //10 
+                            { data: "AvailableSeats", width: "4%" },            //11
+                            { data: "isBooster", width: "1%" },                 //12
+                            { data: "Buttons", width: "25%" },                 //13
                         ],
                     });
 
@@ -798,6 +803,11 @@
                                     <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(10, this.checked)" data-column="10">
                                     <label>תאריך הצטרפות</label> |
                                     <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(11, this.checked)" data-column="11">
+                                    <label>מספר מקומות ברכב</label> |
+                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(12, this.checked)" data-column="12">
+                                    <label>יש כיסא לתינוק</label> |
+
+                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(13, this.checked)" data-column="13">
                                     <label>פעולות</label>
                                 </div>
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
@@ -814,6 +824,8 @@
                                             <th>תאריך הסעה אחרונה</th>
                                             <th>מסלול שכיח: נקודה לנקודה</th>
                                             <th>תאריך הצטרפות</th>
+                                            <th>מספר מקומות ברכב</th>
+                                            <th>יש כיסא לתינוק</th>
                                             <th>פעולות</th>
                                         </tr>
                                     </thead>
