last publish to Gilad_test

--- a/Road to Recovery/pages/documentedRidesModal.html
+++ b/Road to Recovery/pages/documentedRidesModal.html
@@ -11,6 +11,7 @@
                 <thead>
                     <tr dir="rtl">
                         <th>תאריך</th>
+                        <th>יום</th>
                         <th>שעה</th>
                         <th>קו</th>
                         <th>חולה</th>
