--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -1112,7 +1112,8 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year" class="form-control">
-                                                    <option value="2024" selected>2024</option>
+                                                    <option value="2025" selected>2025</option>
+                                                    <option value="2024">2024</option>
                                                     <option value="2023">2023</option>
                                                     <option value="2022">2022</option>
                                                     <option value="2021">2021</option>
