--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -1060,7 +1060,7 @@
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="هاتف إضافي  Additional Phone"
-                                                           class="col-sm-2 control-label">טלפון נוסף</label>
+                                                           class="col-sm-2 control-label">טלפון משני</label>
                                                     <div class="col-sm-6">
                                                         <input id="HomePhone" dir="ltr" name="HomePhone" type="text"
                                                                class="form-control" placeholder="0xxxxxxxxx או 0xxxxxxxx">
@@ -1072,7 +1072,7 @@
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="هاتف اضافي  Telephone 2"
-                                                           class="col-sm-2 control-label">טלפון 2</label>
+                                                           class="col-sm-2 control-label">טלפון נוסף</label>
                                                     <div class="col-sm-6">
                                                         <input dir="ltr" id="phone2" name="phone2" type="text"
                                                                class="form-control" placeholder="0xxxxxxxxx או 0xxxxxxxx">
