--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -428,7 +428,7 @@
     </div>
     <!-- ↑ RidesHistoryModal ↑  -->
 
-    <div id="characteristics">
+    <div dir="rtl" id="characteristics">
 
     </div>
 
